--- a/package.json
+++ b/package.json
@@ -2,38 +2,17 @@
   "name": "@nosferatu500/react-sortable-tree",
   "version": "4.4.0",
   "description": "Drag-and-drop sortable component for nested data and hierarchies",
-  "main": "./index.js",
-  "module": "./esm/index.js",
-  "types": "./index.d.ts",
-  "exports": {
-    "./package.json": "./package.json",
-    "./style.css": "./style.css",
-    ".": {
-      "types": "./index.d.ts",
-      "module": "./esm/index.js",
-      "import": "./esm/index.mjs",
-      "default": "./index.js"
-    }
-  },
-  "files": [
-    "**"
-  ],
-  "sideEffects": false,
+  "main": "lib/index.js",
+  "module": "lib/index.esm.js",
+  "types": "lib/index.d.ts",
   "scripts": {
+    "clean": "rimraf lib",
     "prebuild": "yarn clean",
     "build": "rollup -c",
-    "build:storybook": "build-storybook -o build",
-    "clean": "rimraf dist",
-    "clean:storybook": "rimraf build",
-    "lint": "eslint '*.{js,json}' '{src,tests}/**/*.{ts,tsx}' --cache",
-    "prepublishOnly": "yarn build",
-    "release": "standard-version",
-    "storybook": "start-storybook -p ${PORT:-3001} -h 0.0.0.0",
-    "postbuild": "yarn copy",
-    "copy": "rimraf dist/tests.d.ts && shx cp -r dist/*.d.ts dist/esm && shx mv dist/* dist && shx cp package.json readme.md LICENSE dist && json -I -f dist/package.json -e \"this.private=false; this.devDependencies=undefined; this.optionalDependencies=undefined; this.scripts=undefined; this.prettier=undefined; this['lint-staged']=undefined;\"",
-    "publish:alpha": "cd dist && npm publish --tag alpha",
-    "publish:beta": "cd dist && npm publish --tag beta",
-    "publish:release": "cd dist && npm publish"
+    "lint": "eslint '*.{js,json}' 'src/**/*.{ts,tsx}' --cache",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "prepublishOnly": "yarn build"
   },
   "engines": {
     "node": ">=16"
@@ -60,42 +39,33 @@
     "access": "public"
   },
   "contributors": [
-    "Chris Fritz",
     "Vitalii Shvetsov"
   ],
+  "author": "Chris Fritz",
   "license": "MIT",
   "bugs": "https://github.com/nosferatu500/react-sortable-tree/issues",
-  "dependencies": {
-    "@nosferatu500/react-dnd-scrollzone": "^2.0.10",
-    "lodash.isequal": "^4.5.0",
-    "react-dnd": "14.0.4",
-    "react-dnd-html5-backend": "^14.1.0",
-    "react-virtuoso": "^4.3.10"
-  },
   "devDependencies": {
     "@babel/core": "^7.22.5",
     "@babel/eslint-parser": "^7.22.5",
-    "@babel/helper-module-imports": "^7.22.5",
-    "@babel/plugin-transform-react-jsx": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
-    "@babel/types": "^7.22.5",
-    "@rollup/plugin-babel": "^6.0.3",
+    "@babel/preset-react": "^7.22.5",
+    "@babel/preset-typescript": "^7.22.5",
+    "@rollup/plugin-commonjs": "^25.0.1",
     "@rollup/plugin-node-resolve": "^15.1.0",
+    "@rollup/plugin-terser": "^0.4.3",
     "@rollup/plugin-typescript": "^11.1.1",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addons": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@storybook/theming": "^6.5.16",
-    "@types/babel-plugin-macros": "^3.1.0",
+    "@storybook/addon-actions": "^7.0.20",
+    "@storybook/addon-essentials": "^7.0.20",
+    "@storybook/addon-links": "^7.0.20",
+    "@storybook/addon-styling": "^1.3.0",
+    "@storybook/react": "^7.0.20",
+    "@storybook/react-webpack5": "^7.0.20",
     "@types/lodash.isequal": "^4.5.6",
     "@types/react": "^17.0.62",
     "@types/react-dom": "^17.0.20",
     "@typescript-eslint/eslint-plugin": "^5.59.11",
     "@typescript-eslint/parser": "^5.59.11",
-    "acorn-jsx": "^5.3.2",
-    "autoprefixer": "^10.4.14",
-    "babel-plugin-macros": "^3.1.0",
-    "esbuild": "^0.18.2",
+    "babel-loader": "^9.1.2",
     "eslint": "^8.42.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -110,25 +80,29 @@
     "eslint-plugin-sonarjs": "^0.19.0",
     "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-unicorn": "^47.0.0",
-    "json": "^11.0.0",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
-    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dnd-touch-backend": "^14.1.1",
     "react-dom": "^17.0.2",
-    "rimraf": "^5.0.1",
     "rollup": "^3.25.1",
-    "rollup-plugin-esbuild": "^5.0.0",
+    "rollup-plugin-dts": "^5.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "shx": "^0.3.4",
-    "tslib": "^2.5.3",
+    "storybook": "^7.0.20",
     "typescript": "^5.1.3"
   },
   "peerDependencies": {
     "react": "^17.0.0 || ^18.0.0",
     "react-dnd": "14.0.4",
     "react-dom": "^17.0.0 || ^18.0.0"
+  },
+  "dependencies": {
+    "@nosferatu500/react-dnd-scrollzone": "^2.0.10",
+    "lodash.isequal": "^4.5.0",
+    "react-dnd": "14.0.4",
+    "react-dnd-html5-backend": "^14.1.0",
+    "react-virtuoso": "^4.3.10"
   },
   "browserslist": {
     "production": [
